# warmup-companion

./: .gitignore  .mcp.json  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  PRIVACY.md  README.md  SECURITY.md  build.rs  skills-lock.json  start
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: ci.yml
assets/: README.md  eng_news_2025_100K-words.txt
assets/controller-models/.github/workflows/: ci.yml
crates/warmup-gamepad/: Cargo.toml
crates/warmup-gamepad/src/: lib.rs
docs/: RELEASES.md  companion-ipc-protocol.md
docs/adr/: 0001-local-prediction-sendinput.md  0002-companion-gamepad-input-authority.md  0003-app-state-not-split-by-mode.md
install/: Collect-WarmupVkDiagnostics.ps1  Get-WarmupParakeet.ps1  Get-WarmupSpeech.ps1  Install-WarmupVk.ps1  warmup-companion.nsi
src/: config.rs  crash.rs  debug_state.rs  gamepad.rs  gamepad_backend.rs  golden.rs  hid_gamepad.rs  hid_reader.rs  install.rs  main.rs  pad_decode.rs  pc_cursor.rs  pipe_server.rs  predict_lexicon.txt  predict_ngram.rs  protocol.rs  sentry_telemetry.rs  service.rs  symbols.rs  time_util.rs  tray.rs  vk_commit.rs  vk_gate.rs  vk_nav.rs  vk_predict.rs  win_stub.rs  xinput_backend.rs  xusb_ioctl.rs
src/win/: debug_overlay.rs  desktop.rs  desktop_window.rs  game_detect.rs  logon_focus.rs  mod.rs  native_keyboard.rs  prompt_overlay.rs  speech_input.rs  surface.rs  vk_layouts.rs  vk_log.rs  vk_renderer.rs  vk_ui.rs  xbox_vk.rs
tests/fixtures/: cursor-scroll-golden.json
tools/: New-ReleaseArtifacts.ps1  crop_controller_svgs.py  gen_vk_layouts.py  pool.hex
