[package]
name = "warmup-companion"
version = "0.2.2"
edition = "2021"
build = "build.rs"

[features]
default = ["service", "parakeet"]
gamepad = ["dep:warmup-gamepad", "dep:enigo", "dep:ctrlc"]
service = ["gamepad", "speech", "dep:windows-service"]
# Offline mic dictation: cpal capture in-process, whisper.cpp (whisper-cli.exe)
# as an optional downloaded sidecar. The Mic key is hidden unless the runner AND
# a model are present on disk, so speech is a true opt-in install.
speech = ["dep:cpal"]
# Parakeet (NVIDIA) engine: native in-process ASR via parakeet-rs/ort.
# load-dynamic => onnxruntime.dll is found at RUNTIME (dropped beside the model by
# the installer), so the binary links no native ONNX.
parakeet = ["speech", "dep:parakeet-rs"]

[dependencies]
warmup-gamepad = { path = "crates/warmup-gamepad", optional = true }
enigo = { version = "0.3", optional = true }
ctrlc = { version = "3.4", optional = true }
windows-service = { version = "0.8", optional = true }
cpal = { version = "0.15", optional = true }
# default-features off + load-dynamic: no link-time onnxruntime; the DLL is loaded
# at runtime from beside the model (see speech_input::engine::parakeet).
parakeet-rs = { version = "0.3.6", optional = true, default-features = false, features = ["cpu", "load-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.47.0"
png = "0.18.1"
sentry = { version = "0.48.2", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "ureq"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Foundation_Numerics",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Environment",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_Pipes",
    "Win32_System_RemoteDesktop",
    "Win32_System_StationsAndDesktops",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_SpeechRecognition",
] }
